rns-lang/tests/snapshots/parser-class_directive-header-trailing_tokens-method_descriptor.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld ()V
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: unexpected method descriptor after class name
   ╭─[ test_data/integration/parser/class_directive/header/trailing_tokens/method_descriptor.ja:1:26 ]
   │
 1 │ .class public HelloWorld ()V
   │                          ─┬─  
   │                           ╰─── method descriptors are not allowed here
   │ 
   │ Note: Method descriptors must follow method names in '.method' directives.
───╯
